--- a/lab4/styles/indext-style.css
+++ b/lab4/styles/indext-style.css
@@ -1,9 +1,22 @@
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #008080;
+  display: flex;
+  flex-direction: column;
+}
 
+#header {
+  background-color: #004F4F;
+  border-bottom: 2px solid black;
+  text-align: center;
+  color: white;
+}
+#zipCode-div,
 #password-div,
 #username-div {
   position: relative;
   display: inline-block;
-  opacity: 75%;
 }
 
 #username-valid {
@@ -27,16 +40,34 @@
   opacity: 0;
   pointer-events: none;
   padding: 2px;
-  margin: 5px;
+  margin-left: 50px;
   border: 2px solid rgba(168, 168, 168, 0.5);
   border-radius: 5px;
   transform: translateY(-5px);
   transition: 0.2s ease;
 }
+#zipCode-suggestion {
+  position: relative;
+  background-color: rgba(168, 168, 168, 0.25);
+  left: 5%;
+  opacity: 0;
+  pointer-events: none;
+  padding: 0;
+  margin-left: 15px;
+  border: 2px solid rgba(168, 168, 168, 0.5);
+  border-radius: 5px;
+  transform: translateY(-10px);
+  transition: 0.2s ease;
+}
 
 
+#zipCode-suggestion.show,
 #password-suggestion.show,
 #username-valid.show {
   opacity: 1;
   transform: translateY(0);
+}
+
+#username-input {
+  background-color: white;
 }
